--- a/Phase_B/gptalk-frontend/src/app/protected/protected.component.html
+++ b/Phase_B/gptalk-frontend/src/app/protected/protected.component.html
@@ -1,6 +1,6 @@
 <div class="p-grid p-justify-center">
   <div class="p-col-4">
     <h2>Protected Data</h2>
-    <pre>{{ protectedData | json }}</pre>
+    <pre>{{ protectedData$ | async | json }}</pre>
   </div>
 </div>
