--- a/Phase_B/gptalk-frontend/src/app/pages/register/register.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/register/register.component.scss
@@ -1,7 +1,9 @@
 .img-logo {
   display: flex;
   justify-content: center;
-  margin-top: 15px;
+  user-select: none;
+  pointer-events: none;
+  margin-top: 45%;
   margin-bottom: 15px;
   //color: #5EA0F1;
   //filter: invert(37%) sepia(92%) saturate(4416%) hue-rotate(218deg) brightness(158%) contrast(89%);
@@ -12,7 +14,6 @@
   font-family: "Inter var", sans-serif;
   color: #4b5563;
   text-align: center;
-  //margin-top: -30px;
 }
 
 .register-content {
@@ -28,37 +29,30 @@
   margin-bottom: 26px;
 }
 
-//.form-input-group input {
-//  width: 100%;
-//  padding: 8px;
-//  border: 1px solid #ccc;
-//  border-radius: 4px;
-//  box-sizing: border-box;
-//}
-
 //Used to avoid the password field from being larger than regular text inputs
 :host ::ng-deep .password-field input{
     width: 15rem;
     font-size: small;
   }
 
-//adds hover effects for the navigation buttons at the top of the register form
-.bg-primary {
-  transition: all 0.25s ease;
-}
-.bg-primary:hover {
-  background-color: #2563eb !important;
-}
+////adds hover effects for the navigation buttons at the top of the register form
+//.bg-primary {
+//  transition: all 0.25s ease;
+//}
+//.bg-primary:hover {
+//  background-color: #2563eb !important;
+//}
+//
+//.surface-border {
+//  transition: all 0.25s ease;
+//}
+//.surface-border:hover {
+//  background-color: #d2d9e8 !important;
+//}
 
-.surface-border {
-  transition: all 0.25s ease;
-}
-.surface-border:hover {
-  background-color: #d2d9e8 !important;
-}
-
-.msg-password-mismatch {
+.error-msg {
   margin-top: -15px;
+  text-wrap: nowrap;
 }
 
 .text-login-link {
@@ -67,6 +61,12 @@
   text-align: center;
 }
 
-a:visited {
+a {
+  text-decoration: none;
   color: #2563eb;
+  transition: all 0.25s ease;
+
+}
+a:hover {
+  font-weight: bold;
 }
