Changed Constructor to injector in register component Added toastr to register component

--- a/Phase_B/gptalk-frontend/src/app/register/register.component.html
+++ b/Phase_B/gptalk-frontend/src/app/register/register.component.html
@@ -121,9 +121,8 @@
                 <p-password class="password-field" name="password" id="confirmPassword" [feedback]="false" formControlName="confirmPassword" />
                 <label for="confirmPassword">Confirm Password</label>
               </p-floatLabel>
-              @if (passwordMismatch() || errorMsg) {
+              @if (passwordMismatch()) {
                 <p-message class="error-msg" severity="warning" [text]=errorMsg></p-message>
-<!--                <p-message class="msg-password-mismatch" severity="warning" text="Passwords do not match"></p-message>-->
               }
             </div>
           </div>
