--- a/Phase_B/gptalk-frontend/src/app/pages/home/home.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>,
+<div class="content">
+  <h1>Good {{getTimeOfDay()}} {{firstName()}}!</h1>
+  <h1>Pick one of the options on the left to get started</h1>
+</div>
